--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Navbar.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Navbar.css
@@ -73,7 +73,7 @@
   #navbar:hover {
     transition: 0.2s;
     border-radius: 0 0 2% 2%;
-    transform: scale(1.02) translate(0, 1%);
+    transform: scale(1.02) translate(-1%, 1%);
   }
   #navbar::before {
     content: '';
@@ -86,6 +86,7 @@
     height: 100vh;
     background: rgba(0, 0, 0, 0);
     pointer-events: none;
+    transform: scaleY(0.98) translateY(-1%);
   }
   #navbar:hover::before {
     background: rgba(0, 0, 0, 0.6);
