--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
+
 .page.glossary .content {
   display: flex;
   position: relative;
@@ -77,8 +79,9 @@
   align-content: baseline;
   flex-wrap: wrap;
   height: 100%;
-  padding-bottom: 10vh;
+  padding-bottom: 3rem;
   overflow: auto;
+  mask-image: linear-gradient(to bottom, transparent 0%, black 1%, black 85%, transparent 100%);
 }
 
 .page.glossary .index .entries .entry {
@@ -120,6 +123,39 @@
 .page.glossary .index .entries .entry .caption {
   display: block;
   text-align: center;
+}
+
+.page.glossary .index .compendium-button {
+  transition: 0.3s;
+  position: absolute;
+  bottom: 0;
+  width: 45%;
+  padding-left: calc(2% + 0.5rem);
+  padding-right: 1%;
+  transform: translateX(-0.5rem);
+  background: linear-gradient(
+    to right,
+    var(--compendium-main),
+    var(--compendium-main) 90%,
+    var(--compendium-off) 90%
+  );
+  color: black !important;
+  font-family: 'Courgette', cursive;
+  font-size: 2rem;
+  font-weight: 900;
+  text-decoration: none;
+  clip-path: polygon(0 0, 100% 0, 100% 10%, calc(100% - 1vw) 50%, 100% 90%, 100% 100%, 0 100%);
+  overflow: hidden;
+}
+.page.glossary .index .compendium-button:hover {
+  transform: translateX(0rem);
+}
+.page.glossary .index .compendium-button::after {
+  content: '\21aa';
+  margin-left: 4%;
+  font-size: 3rem;
+  line-height: 0;
+  vertical-align: middle;
 }
 
 .page.glossary .content .blowup-area .blowup {
@@ -246,6 +282,16 @@
   }
   .page.glossary .content .index:hover::after {
     opacity: 0;
+  }
+
+  .page.glossary .index .compendium-button {
+    width: 100%;
+    font-size: 1.5rem;
+  }
+  .page.glossary .index .compendium-button::after {
+    font-size: 1.5rem;
+    margin-left: 1%;
+    vertical-align: baseline;
   }
 
   .page.glossary .content .blowup-area .blowup .printout .identity .nameplate {
