Adjust navbar to be more stable on mobile

--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Compendium.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Compendium.css
@@ -77,4 +77,8 @@
   .page.compendium .content .side {
     max-width: none;
   }
+
+  .page.compendium .content .side.index .categories {
+    font-size: 4vw;
+  }
 }
