Use Google's material icons as opposed to a local library

--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Navbar.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Navbar.css
@@ -42,7 +42,7 @@
   z-index: 51;
 }
 #navbar .nav-link.external::before {
-  content: '\e89e';
+  content: 'open_in_new';
   margin-right: 0.3rem;
   vertical-align: text-bottom;
   font-family: 'Material Symbols Outlined';
