--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Downloads.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Downloads.css
@@ -1,6 +1,6 @@
 .page.downloads .content {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-top: 4%;
@@ -8,7 +8,7 @@
 
 .page.downloads .version-container {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   align-items: stretch;
   min-width: 75%;
   min-height: 30%;
