--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Version.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Version.css
@@ -31,7 +31,7 @@
 }
 .version-card .stat .data {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
 }
 
 .version-card .expansion {
