--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/index.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/index.css
@@ -24,13 +24,13 @@
 
 #root {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   min-height: 100vh;
 }
 
 #app {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   flex: 1;
   background-image: var(--background);
   background-size: cover;
@@ -39,7 +39,7 @@
 
 .page {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   flex: 1;
 }
 .content {
