--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Home.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Home.css
@@ -8,17 +8,15 @@
   position: fixed;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 #backvid video {
   transition: 0.6s;
-  align-self: center;
-  object-position: center;
-  object-fit: cover;
   opacity: 0;
 }
 #backvid video[src] {
