--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/AdminPanel.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/AdminPanel.css
@@ -142,6 +142,29 @@
   font-size: 2rem;
 }
 
+.page.admin-panel form .btn.authorize:not(.disabled) {
+  background: #5865f2;
+}
+.page.admin-panel form .btn.authorize:not(.disabled):hover {
+  background: #4c57d0;
+}
+.page.admin-panel form .btn.authorize:not(.disabled)::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  margin-right: 0.2em;
+  background-image: url('https://assets-global.website-files.com/6257adef93867e50d84d30e2/62595384f934b806f37f4956_145dc557845548a36a82337912ca3ac5.svg');
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+}
+
+.page.admin-panel form .btn.authorize.disabled::before {
+  content: '\2713';
+}
+
 @keyframes flash {
   from {
     opacity: 1;
