--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Downloads.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Downloads.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  gap: 1em;
   min-width: 75%;
   min-height: 30%;
   padding: 0.5%;
@@ -19,8 +20,4 @@
 
 .page.downloads .version-container .loading-placeholder {
   align-self: center;
-}
-
-.page.downloads .version-container .version-card:not(:last-child) {
-  margin-bottom: 3%;
 }
