--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/Glossary.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 
+#root:has(.page.glossary) {
+  height: 100vh;
+}
+
+.page.glossary {
+  height: 100%;
+}
+
 .page.glossary .content {
   display: flex;
-  position: relative;
-  height: 0; /* Disable scrolling of main document on page */
-  overflow-x: auto;
+  height: 100%;
 }
 
 .page.glossary .content .index {
@@ -12,7 +18,7 @@
   flex-direction: column;
   align-items: stretch;
   flex: 1;
-  padding-top: 0.3%;
+  padding-top: 1%;
 }
 
 .page.glossary .content .blowup-area {
@@ -26,13 +32,13 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 0.5em;
 }
 
 .page.glossary .index .categories .category {
   transition: 0.2s;
   background: var(--accent);
   padding: 0.5% 2%;
-  margin: 1.5%;
   clip-path: polygon(0.5vw 0%, calc(100% - 0.5vw) 0%, 100% 50%, calc(100% - 0.5vw) 100%, 0.5vw 100%, 0% 50%);
   cursor: pointer;
   white-space: nowrap;
@@ -64,7 +70,7 @@
 
 .page.glossary .index .searchbar {
   width: 85%;
-  margin: 2% 0 1%;
+  margin: 1.5em 0 1em;
   padding: 1%;
   align-self: center;
   border-radius: 5px;
@@ -75,19 +81,22 @@
 .page.glossary .index .entries {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
   align-content: baseline;
   flex-wrap: wrap;
   height: 100%;
-  padding-bottom: 3rem;
+  gap: 1%;
+  padding: 2% 0 4% 0;
   overflow: auto;
   mask-image: linear-gradient(to bottom, transparent 0%, black 1%, black 85%, transparent 100%);
 }
 
 .page.glossary .index .entries .entry {
   transition: 0.2s;
-  width: 7rem;
-  margin: 1%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20%;
+  min-width: 6em;
   cursor: pointer;
 }
 .page.glossary .index .entries .entry:hover {
@@ -95,12 +104,13 @@
 }
 .page.glossary .index .entries .entry .icon {
   position: relative;
-  height: 7rem;
+  width: 100%;
   overflow: hidden;
 }
 .page.glossary .index .entries .entry .icon img {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1 / 1;
+  padding: 5%;
   image-rendering: pixelated;
   border: 1px solid gray;
   border-radius: 25px;
@@ -129,7 +139,6 @@
   transition: 0.3s;
   position: absolute;
   bottom: 0;
-  width: 45%;
   padding-left: calc(2% + 0.5rem);
   padding-right: 1%;
   transform: translateX(-0.5rem);
@@ -152,7 +161,7 @@
 }
 .page.glossary .index .compendium-button::after {
   content: '\21aa';
-  margin-left: 4%;
+  margin: 0 0.3rem;
   font-size: 3rem;
   line-height: 0;
   vertical-align: middle;
