--- a/WitcheryResurrectedWeb/ClientApp/src/client/styles/CraftingGrids.css
+++ b/WitcheryResurrectedWeb/ClientApp/src/client/styles/CraftingGrids.css
@@ -375,10 +375,13 @@
 
 .crafting-grid .slot .tooltip { /* Parts borrowed from https://ftb.fandom.com */
   position: fixed;
+  margin: 0.125em 0.125em;
+  padding: 0.375em;
   background: rgba(16, 0, 16, 0.9);
   color: white;
   text-shadow: 0.125em 0.125em 0 #3f3f3f;
-  font-size: 16px;
+  font-size: 14px;
+  white-space: nowrap;
   pointer-events: none;
   visibility: hidden;
   opacity: 1;
